--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -8,6 +8,14 @@ dependencies {
         officialMojangMappings()
         parchment("org.parchmentmc.data:parchment-${parchment_minecraft}:${parchment_version}@zip")
     }
+    modImplementation "com.mrcrayfish:framework-fabric:${minecraft_version}-${framework_version}"
+    modImplementation "com.mrcrayfish:refurbished_furniture-fabric:${minecraft_version}-${refurbished_furniture_version}"
+
+    // JEI
+    modCompileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
+    modCompileOnly "mezz.jei:jei-${minecraft_version}-fabric-api:${jei_version}"
+    modRuntimeOnly "mezz.jei:jei-${minecraft_version}-fabric:${jei_version}"
+
     modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"
 }
