--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@
 
 # Project
 version=1.0.0
-group=com.example.examplemod
+group=org.chubby
 java_version=21
 
 # Common
 minecraft_version=1.21
-mod_name=ExampleMod
-mod_author=Jared
-mod_id=examplemod
-license=CC0-1.0
+mod_name=More Furniturez
+mod_author=Small_chubby
+mod_id=morefurniturez
+license=MIT
 credits=
 description=The description of your mod. \nAccepts multilines.
 minecraft_version_range=[1.21, 1.22)
@@ -31,9 +31,13 @@ forge_version=51.0.17
 forge_loader_version_range=[51,)
 
 # NeoForge
-neoforge_version=21.0.37-beta
+neoforge_version=21.1.28
 neoforge_loader_version_range=[4,)
 
+# Dependencies
+framework_version = 0.9.0
+jei_version = 19.7.0.79
+refurbished_furniture_version = 1.0.6
 # Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
