--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -37,3 +37,10 @@ neoForge {
 }
 
 sourceSets.main.resources { srcDir 'src/generated/resources' }
+
+dependencies{
+    implementation "com.mrcrayfish:framework-neoforge:${minecraft_version}-${framework_version}"
+    implementation "com.mrcrayfish:refurbished_furniture-neoforge:${minecraft_version}-${refurbished_furniture_version}"
+    compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
+    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
+}
